Added bootstrap + 3 mainpage cards about me

--- a/LoginAppMVC/Views/Shared/_Layout.cshtml
+++ b/LoginAppMVC/Views/Shared/_Layout.cshtml
@@ -7,23 +7,22 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/LoginAppMVC.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/Superherostrap.css"/>
+    <link rel="stylesheet" href="~/css/FlipCard.css" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">LoginAppMVC</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                <a class="navbar-brand" asp-controller="Home" asp-action="Index">LoginAppMVC</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                <div class="collapse navbar-collapse" id="navbarColor01">
+                    <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link active" asp-controller="Home" asp-action="Index">Home</a>
+                            <span class="visually-hidden">(current)</span>
                         </li>
                     </ul>
                 </div>
@@ -36,7 +35,14 @@
             @RenderBody()
         </main>
     </div>
-
+    <div>
+        <div class="flip-card-label-stack">Tech Stack</div>
+        <div class="flip-card-stack"></div>
+        <div class="flip-card-label-hobbies">Hobbies</div>
+        <div class="flip-card-hobbies"></div>
+        <div class="flip-card-label-weaknesses">Weaknesses</div>
+        <div class="flip-card-weaknesses"></div>
+    </div>
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2022 - LoginAppMVC - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
